...
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.99"
        android:background="@color/cardview_light_background"
        android:fillViewport="true">


        <LinearLayout
            android:id="@+id/layoutlogin"
            android:layout_width="match_parent"
            android:layout_height="0.99dp"
            android:orientation="vertical"

            android:weightSum="1">

...
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="signin"
                android:text="@string/action_sign_in"
...
