<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="blocksDescendants"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerVertical="true"
        android:foregroundGravity="left"
        android:focusable="false"
        android:gravity="left"
        android:clickable="false"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="25dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="true"
        android:focusable="false"
        android:clickable="true"
        android:foregroundGravity="right"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

</RelativeLayout>