<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.qmul.nminoiu.tunein.RealTimeActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">
...
        <!--android:textColor="@color/colorPrimaryDark"-->
        <!--android:textSize="16sp"-->
        <!--android:textStyle="bold" />-->
    </LinearLayout>

    <ImageButton
        android:id="@+id/fab1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="13dp"
        android:adjustViewBounds="false"
...
        app:showAsAction="always"

        />


    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="-30dp"
        android:layout_marginTop="55dp"
...
