<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/delete"
        android:title="Delete" />
    <item
        android:id="@+id/listenwith"
        android:title="Listen with >" />

</menu>